Squash bugs

--- a/client/main.css
+++ b/client/main.css
@@ -339,9 +339,10 @@ h1, h2, h3, h4, h5 {
   background: #333;
   border: 1px solid #444;
 }
-#login-dropdown-list {
+#login-dropdown-list, #login-dropdown-list .fixed-theme {
   padding: 0;
   margin: 0;
+  font-weight: normal;
 }
 #login-dropdown-list .dropdown-menu {
   min-width: 150px !important;
